# products_shop

./: pyproject.toml
app_config/: settings.py  urls.py
shop/: admin.py  models.py  services.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product.py  0003_product_image_middle_product_image_small.py  0004_alter_category_image_alter_product_image_and_more.py  0005_alter_product_image_alter_product_image_middle_and_more.py
shop/serializers/: categories.py  products.py  sub_categories.py
